# actix-keycloak-sample

./: Cargo.toml  README.md
src/: guardauth.rs  main.rs  openid.rs
src/structs/: base.rs
