[package]
name = "actix-keycloak-sample"
version = "0.1.0"
edition = "2021"
authors = ["Davide Pegoraro <davide.pegoraro@outlook.com>"]

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"
reqwest = { version = "0.11", features = ["blocking", "json"] }
